kernel/tests/snapshots/runtime_cli_snapshots/validate_trellis_worker_result__invalid_outcome.snap
---
source: tests/runtime_cli_snapshots.rs
assertion_line: 240
expression: response
---
{
  "output": {
    "data": {
      "audit_request": null,
      "challenge_claim_updates": {},
      "comments": "Sorry, dep cycle.",
      "deleted_nodes": [],
      "deviation_deletions": [],
      "deviation_requests": {},
      "difficulty_updates": {},
      "needs_restructure_suggested_nodes": [],
      "node_deviation_claims": {},
      "outcome": "invalid",
      "semantic_dep_updates": {},
      "summary": "Made invalid edits, need to revert.",
      "target_claim_updates": {}
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_trellis_worker_result_ok"
}
