kernel/tests/snapshots/runtime_cli_snapshots/validate_trellis_worker_result__missing_outcome.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": null,
    "errors": [
      "outcome must be non-empty"
    ],
    "ok": false
  },
  "status": "validate_trellis_worker_result_ok"
}
