kernel/tests/snapshots/runtime_cli_snapshots/validate_trellis_worker_result__stuck_outcome_cleanup_rejected.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": null,
    "errors": [
      "outcome must be one of ['valid', 'invalid']"
    ],
    "ok": false
  },
  "status": "validate_trellis_worker_result_ok"
}
